# chess_board

./: CMakeLists.txt  README.md
include/: chess.h  common.h  log.h  math_utils.h  ui.h
src/: chess.cpp  log.cpp  main.cpp  math_utils.cpp  ui.cpp
tests/: math_utils_tests.cpp
